--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
+@import url(https://fonts.googleapis.com/css?family=Prompt:regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Prompt", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: rgb(238, 238, 238);
+  background: linear-gradient(
+    297deg,
+    rgba(238, 238, 238, 1) 0%,
+    rgba(57, 53, 53, 1) 98%
+  );
+}
+html {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
