validation was added, some other components were created

--- a/src/components/Sidebar.module.scss
+++ b/src/components/Sidebar.module.scss
@@ -1,6 +1,6 @@
 .sidebar {
   font-family: "Prompt";
-  width: 250px;
+  min-width: 250px;
   height: 610px;
   display: flex;
   justify-content: space-around;
