--- a/src/components/FriendsBlock.module.scss
+++ b/src/components/FriendsBlock.module.scss
@@ -1,8 +1,8 @@
 .box {
+  display: flex;
   width: 1100px;
   height: 610px;
   background-color: white;
-  //   border: 1px solid white;
   border-radius: 30px;
   overflow: hidden;
 }
