--- a/src/components/Login.module.scss
+++ b/src/components/Login.module.scss
@@ -1,4 +1,4 @@
-.form {
+.box {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,12 +11,13 @@
   }
 }
 
-.box {
+.form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  gap: 15px;
   width: 400px;
   height: 400px;
   border: 1px solid #e7ebf0;
@@ -24,8 +25,12 @@
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .button {
-  width: 100px;
+  min-width: 150px;
   height: 50px;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 30px !important;
   border: 1px solid black;
   border-radius: 6px;
