--- a/src/components/Signup.module.scss
+++ b/src/components/Signup.module.scss
@@ -1,4 +1,4 @@
-.form {
+.box {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,8 +10,10 @@
   }
 }
 
-.box {
+.form {
   display: flex;
+  gap: 15px;
+  padding: 5px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -23,7 +25,7 @@
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .button {
-  width: 100px;
+  min-width: 150px;
   height: 50px;
   border: 1px solid black;
   border-radius: 6px;
