--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Prompt:regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
