--- a/src/components/MyAvatar.module.scss
+++ b/src/components/MyAvatar.module.scss
@@ -1,3 +1,11 @@
+.block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 7px;
+}
+
 .avatar {
   display: block;
   width: 100px;
